unpackaged/main/default/objects/Auto_Assign_User__c/Auto_Assign_User__c.object-meta.xml
<CustomObject>
    <label>Auto Assign User</label>
    <nameField>
        <displayFormat>AA-{000}</displayFormat>
        <label>Auto Assign Users Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Assign Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>