unpackaged/main/default/objects/Auto_Assign_User__c/fields/Approval_Recycling_Program__c.field-meta.xml
<CustomField>
    <fullName>Approval_Recycling_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Recycling Program</label>
    <type>Checkbox</type>
</CustomField>