unpackaged/main/default/objects/Auto_Assign_User__c/fields/Business_Loan_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Business_Loan_Analyst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Loan Analyst</label>
    <type>Checkbox</type>
</CustomField>