unpackaged/main/default/objects/Auto_Assign_User__c/fields/Buyerzone__c.field-meta.xml
<CustomField>
    <fullName>Buyerzone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyerzone</label>
    <type>Checkbox</type>
</CustomField>