unpackaged/main/default/objects/Auto_Assign_User__c/fields/Edge_Funding__c.field-meta.xml
<CustomField>
    <fullName>Edge_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible to receive Edge Funding leads</description>
    <label>Edge Funding</label>
    <type>Checkbox</type>
</CustomField>