unpackaged/main/default/objects/Auto_Assign_User__c/fields/Fundera__c.field-meta.xml
<CustomField>
    <fullName>Fundera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundera</label>
    <type>Checkbox</type>
</CustomField>