unpackaged/main/default/objects/Auto_Assign_User__c/fields/Internet_Mailer__c.field-meta.xml
<CustomField>
    <fullName>Internet_Mailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible to receive Internet Mailer leads</description>
    <label>Internet Mailer</label>
    <type>Checkbox</type>
</CustomField>