unpackaged/main/default/objects/Auto_Assign_User__c/fields/Lending_Tree_T1__c.field-meta.xml
<CustomField>
    <fullName>Lending_Tree_T1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lending Tree T1</label>
    <type>Checkbox</type>
</CustomField>