unpackaged/main/default/objects/Auto_Assign_User__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>Rep__r.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>