unpackaged/main/default/objects/Auto_Assign_User__c/fields/Organic_Lease__c.field-meta.xml
<CustomField>
    <fullName>Organic_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible to receive Organic Lease leads</description>
    <label>Organic Lease</label>
    <type>Checkbox</type>
</CustomField>