unpackaged/main/default/objects/Auto_Assign_User__c/fields/PPC__c.field-meta.xml
<CustomField>
    <fullName>PPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible to receive PPC leads</description>
    <label>PPC</label>
    <type>Checkbox</type>
</CustomField>