unpackaged/main/default/objects/Auto_Assign_User__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>WC_Sales_User</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Auto_Assign_Users</relationshipName>
    <type>Lookup</type>
</CustomField>