unpackaged/main/default/objects/Auto_Assign_User__c/fields/Specialized_Loan__c.field-meta.xml
<CustomField>
    <fullName>Specialized_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specialized Loan</label>
    <type>Checkbox</type>
</CustomField>