unpackaged/main/default/objects/Auto_Assign_User__c/fields/Strategic_Partner_Auto_Assign_Number__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partner_Auto_Assign_Number__c</fullName>
    <label>Strategic Partner Auto Assign Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>