unpackaged/main/default/objects/Auto_Assign_User__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>TEXT(Rep__r.Manager.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>