unpackaged/main/default/objects/Auto_Assign_User__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <formula>Rep__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID</label>
    <type>Text</type>
</CustomField>