unpackaged/main/default/objects/Auto_Assign_User__c/fields/User_Record_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Record_Active__c</fullName>
    <formula>Rep__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Record Active</label>
    <type>Checkbox</type>
</CustomField>